kube/gcp-experimental/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: web
spec:
  selector:
    app.kubernetes.io/name: web
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
