kube/gcp-experimental/web/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: chunkmydocs
  labels:
    app: web
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 8000
